--- a/WebSite/Areas/Admin/Views/Album/Create.cshtml
+++ b/WebSite/Areas/Admin/Views/Album/Create.cshtml
@@ -6,7 +6,7 @@
 }
 <h2>Add an album</h2>
 
-@using(Html.BeginForm("Create", "Album"))
+@using(Html.BeginForm("Create", "Album", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     <ul>
         <li>
@@ -25,6 +25,11 @@
             @Html.LabelFor(m => m.Type)
             @Html.TextBoxFor(m => m.Type)
             @Html.ValidationMessageFor(m => m.Type)
+        </li>
+
+        <li>
+            Cover image : 
+            <input type ="file" name ="file" />
         </li>
     </ul>
     
